<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:navigationIcon="?attr/homeAsUpIndicator"
        app:title="@string/demo_ipc_cloud_vas_title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:text="@string/demo_ipc_cloud_vas_subtitle"
            android:textAppearance="?attr/textAppearanceBody2" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_dev_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:textAppearance="?attr/textAppearanceBody1"
            android:textIsSelectable="true" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_open_cloud_vas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/demo_ipc_cloud_vas_open" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:textAppearance="?attr/textAppearanceCaption" />
    </LinearLayout>
</LinearLayout>
